# biochar-process-modeling

./: .gitignore  CITATION.cff  LICENSE_NOTES.md  MANIFEST.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md  manifest_simulation_cases.csv
data/curated/moisture_sweep_T790_O2-N2-23-77/: H2O00_T790_O2-N2-23-77_selected.csv  H2O15_T790_O2-N2-23-77_selected.csv  H2O20_T790_O2-N2-23-77_selected.csv
data/curated/oxygen_sweep_H2O10_T790/: H2O10_T790_O2-N2-0-100_selected.csv  H2O10_T790_O2-N2-10-90_selected.csv  H2O10_T790_O2-N2-5-95_selected.csv
data/curated/temperature_sweep_H2O10_O2-N2-23-77/: H2O10_T780_O2-N2-23-77_selected.csv  H2O10_T790_O2-N2-23-77_selected.csv  H2O10_T800_O2-N2-23-77_selected.csv
docs/: assumptions_and_limitations.md  carbon_credit_caution.md  github_profile_snippet.md  model_consistency_notes.md  model_scope.md  model_validation_plan.md  publications.md  repository_roadmap.md
examples/: run_base_case.py
mechanisms/: Wood_pyrolysis.cti  Wood_pyrolysis.yaml
notebooks/: README.md
originals/: blasi_original.py
scripts/: run_biochar_case.py
src/biochar_model/: __init__.py  cantera_reactor.py  carbon_screening.py  feedstock.py
tests/: test_feedstock.py
